- Made many performance improvements (using FindBugs). - Ability of Chainer, Dementia Master shouldn't be castable from hand anymore, also added ability text.